Se modificaron los ejercicios correspondientes al tercer parcial, algunos en cuestión de lógica y otros en cuestión de estilo. También se le esta asignando un mismo estilo a los trabajos.

--- a/JavaBeanAccionesMVC/src/main/webapp/index.html
+++ b/JavaBeanAccionesMVC/src/main/webapp/index.html
@@ -3,10 +3,21 @@
     <head>
         <title>inicio</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <link rel="stylesheet" href="estilos.css"/>
     </head>
     <body>
-        <h1>Tercer Parcial Tecnologias Web I</h1>
-        <h2>Ejercicio de JavaBeans Acciones</h2>
-        <a href="formulario.jsp">Ir al ejercicio</a>
+        <header>
+            <h1>Tercer Parcial - Tecnologias Web I</h1>
+        </header>
+
+        <main>
+            <h2>Ejercicio de JavaBeans con acciones JSP </h2>
+            <h3>MVC -  Llenando el Bean desde el servlet</h3>
+            <button onclick="location.href = 'formulario.jsp'">Ir al Ejercicio</button>
+        </main>
+
+        <footer>
+            <p><a href="https://www.unsij.edu.mx/web/">Universidad de la Sierra Juárez</a></p>
+        </footer>
     </body>
 </html>
