Se le dio estilo a los ejercicios que hacian falta del tercer parcial.

--- a/JavaBeansEnServlets/src/main/webapp/index.html
+++ b/JavaBeansEnServlets/src/main/webapp/index.html
@@ -3,10 +3,21 @@
     <head>
         <title>Inicio</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <link rel="stylesheet" href="estilos.css"/>
     </head>
     <body>
-        <h1>Tercer Parcial - Tecnologias Web I</h1>
-        <h2>Ejercicio JavaBeans en Servlets</h2>
-        <a href="formulario.jsp">Ir al JSP</a>
+        <header>
+            <h1>Tercer Parcial - Tecnologias Web I</h1>
+        </header>
+
+        <main>
+            <h2>Ejercicio de JavaBeans en Servlets</h2>
+            <h3>Propiedades de un JavaBean (Vehículo)</h3>
+            <button onclick="location.href = 'formulario.jsp'">Ir al Ejercicio</button>
+        </main>
+
+        <footer>
+            <p><a href="https://www.unsij.edu.mx/web/">Universidad de la Sierra Juárez</a></p>
+        </footer>
     </body>
 </html>
