--- a/JavaBeansScriptsJSP/src/main/webapp/index.html
+++ b/JavaBeansScriptsJSP/src/main/webapp/index.html
@@ -3,10 +3,20 @@
     <head>
         <title>Inicio</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <link rel="stylesheet" href="estilos.css"/>
     </head>
     <body>
-        <h1>Tercer Parcial - Tecnologias Web I</h1>
-        <h2>Acceso a JavaBeans desde scripts JSP</h2>
-        <a href="verProducto.jsp">Ir al JSP</a>
+        <header>
+            <h1>Tercer Parcial - Tecnologias Web I</h1>
+        </header>
+
+        <main>
+            <h2>Acceso a JavaBeans desde scripts JSP</h2>
+            <button onclick="location.href = 'verProducto.jsp'">Ir al Ejercicio</button>
+        </main>
+
+        <footer>
+            <p><a href="https://www.unsij.edu.mx/web/">Universidad de la Sierra Juárez</a></p>
+        </footer>
     </body>
 </html>
